--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "framer-motion": "^3.1.3",
+    "luxon": "^1.25.0",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1"
