--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# private files
+
+/pages/api/modules/private
+
 # dependencies
 /node_modules
 /.pnp
