--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "framer-motion": "3.1.4",
     "luxon": "1.25.0",
+    "mongoose": "^5.11.10",
     "next": "10.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1"
