--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "firebaseui": "^4.7.1",
     "framer-motion": "3.1.4",
     "luxon": "1.25.0",
     "mongoose": "^5.11.10",
